# crypto_data_fetcher

./: Pipfile  README.md  fetch_prices.py  setup.cfg
crypto_data_fetcher/: binance_future.py  binance_spot.py  bybit.py  ftx.py  kraken.py  okex.py  utils.py
