[metadata]
name = crypto_data_fetcher
version = 0.0.19
author = richmanbtc
description = crypto_data_fetcher
long_description = file:README.md
long_description_content_type=text/markdown
url = https://github.com/richmanbtc/crypto_data_fetcher
license = CC0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
    tests
